@@ -283,6 +283,7 @@
                 --add-reads com.azure.core.amqp=ALL-UNNAMED
                 --add-reads com.azure.storage.common=ALL-UNNAMED
                 --add-reads com.azure.storage.blob=ALL-UNNAMED
+                --add-reads com.azure.storage.internal.avro=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
